Fixed the resolver issue

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PGUSER=postgres
-PGPASSWORD=guildpassword
+PGPASSWORD=postgres
 PGHOST=127.0.0.1
 PGPORT=5432
-PGDATABASE=postgres
+PGDATABASE=testproject
 FRONTEND_PORT=8000
